2011-10-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c (MagickSetFormat): New Wand function to allow
	setting the file or blob format before it has been read.

2011-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/installer/inc/tasks-install-perlmagick.isx: Windows
	setup installer now installs PerlMagick built against ActiveState
	Perl v5.12.4 build 1205.

	* magick/annotate.c (RenderFreetype): Eliminate spurious "out of
	memory" exceptions due to empty text string.

2011-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (ModuleAliases): PAM format is handled by PNM
	coder.

	* jpeg: Record that jpeg sources were updated to release v8c.

	* lcms: Record that lcms sources were updated to release 2.2.

	* png: Record that png sources were updated to release 1.5.4.

	* tiff: Record that tiff sources were updated to release 4.0.0beta7.

	* xml: Record that libxml2 sources were updated to release 2.7.8.

	* zlib: Record that zlib sources were updated to release 1.2.5.

	* VisualMagick/installer/inc/body.isx: Set MagickConfigDirectory
	for DLL build so that .mgk files are put in application top
	directory.  This makes installation layout between static and DLL
	builds more similar.

2011-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/list.c (AppendImageToList): Documentation for
	AppendImageToList() was wrong.  Problem was reported by Brad
	Harder.

2011-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c (MagickXMagickCommand): Display 'save' and
	'print' should display useful error details.  Problem was reported
	by Brad Harder.

2011-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (AllocateSemaphoreInfo): Enable pthread mutex
	error checking if MAGICK_DEBUG is defined when the code is
	compiled.  This mode helps validate that mutexes are used
	correctly.  No longer enable recursive mutexes since the